fix tour section overlap

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1597,7 +1597,6 @@ column-count: 4;
 	
 	section {
     padding:0 5%;
-    padding-top: 55px!important;
   }
 
 .nav>li>a {
